# FreeCAD

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bld.bat  build.sh  pixi.toml  recipe.yaml
.devcontainer/: devcontainer.json
.github/workflows/: CI_master.yml  sub_buildMacOSCondaApple.yml  sub_buildMacOSCondaIntel.yml  sub_buildPixi.yml  sub_buildUbuntu.yml  sub_buildUbuntu2204Conda.yml  sub_buildWindows.yml  sub_buildWindowsConda.yml  sub_forge.yml  sub_weeklyBuild.yml
cMake/FreeCAD_Helpers/: ConfigureCMakeVariables.cmake  InitializeFreeCADBuildOptions.cmake  SetupCoin3D.cmake  SetupCppTrace.cmake
cMake/toolchains/: conda-macos.cmake
ci/: Dockerfile
conda/: .freecad.win-64.conda-lock.yml  .freecad.win-64.lock_environment.yml  cmake.cmd  cmake.sh  conda-env.yaml  environment.devenv.yml  freecad.linux-64.conda-lock.yml  freecad.osx-64.conda-lock.yml  freecad.osx-arm64.conda-lock.yml  freecad.win-64.conda-lock.yml  generate-cmake-preset.py  generate-environment.py  setup-environment.cmd  setup-environment.sh  update-locks.sh
package/rattler-build/: build.bat  build.sh  conda_build_config.yaml  pixi.toml  recipe.yaml
package/rattler-build/linux/: create_bundle.sh
package/rattler-build/osx/: Info.plist.template  create_bundle.sh
package/rattler-build/windows/: create_bundle.sh
package/ubuntu/: install-apt-packages.sh
src/App/: CMakeLists.txt
src/Base/: Vector3D.cpp  Vector3D.h
src/Gui/: CMakeLists.txt  CommandDoc.cpp  View3DInventorViewer.cpp  View3DInventorViewer.h  View3DViewerPy.cpp  View3DViewerPy.h  ViewProviderCoordinateSystem.cpp  ViewProviderCoordinateSystem.h  Workbench.cpp
src/Gui/PreferencePages/: DlgSettingsWorkbenchesImp.cpp
src/Gui/Renderer/: CMakeLists.txt  GLSceneRenderer.cpp  (+11 more)
src/Main/: MainGui.cpp
src/Mod/Assembly/App/: AppAssembly.cpp  AssemblyObject.cpp  AssemblyObject.h  AssemblyObjectInterface.h  AssemblyObjectPy.xml  AssemblyObjectPyImp.cpp  AssemblyUtils.cpp  AssemblyUtils.h  CMakeLists.txt  OndselAssemblyObject.cpp  OndselAssemblyObject.h  OndselSolver.cpp  OndselSolver.h  Solver.cpp  Solver.h
(+34 files in other folders)
